# pyfractal

./: .gitignore  LICENSE.md  README.md  generator.py  mandelbrot.py  setup.cfg
doc/source/: conf.py  index.rst  modules.rst  pyfractal.rst  tests.rst
pyfractal/: __main__.py  generator.py  julia.py  mandelbrot.py
tests/: test_generator.py  test_julia.py  test_mandelbrot.py
