[metadata]
name = pyfractal
author = Manon Coutier, Rémi Ravelli
author_email = manon.coutier@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE
license = MIT
description = Generating Julia and Mandelbrot fractals
long_description = file: readme.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires =
    pytest
    matplotlib
    # Liste des dépendances externes

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS