[metadata]
name = pyfractal
author = Manon Coutier, Rémi Ravelli
author_email = manon.coutier@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE.md
license = MIT
description = Generating Julia and Mandelbrot fractals
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires =
    pytest
    matplotlib
    numpy
    # Liste des dépendances externes

[options.entry_points]
console_scripts =
    MandelbrotPlot=pyfractal.__main__:cli_plot_mandelbrot
    JuliaPlot=pyfractal.__main__:cli_plot_julia

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS